# aria-accelerator

./: .gitignore  README-DAB.md  README.md  databricks.yml  env.example  pyproject.toml  requirements.txt
app/: README.md  app.js  app.py  app.yaml  package-lock.json  package.json  requirements.txt  start.sh  test_imports.py
app/src/aria/api/: app.py
app/src/aria/config/: __init__.py  backend_services.yaml  constants.py  unified_config.py
app/src/aria/core/: __init__.py  base_service.py  error_handler.py  exceptions.py  logging_config.py  logging_utils.py
app/src/aria/services/: __init__.py  analytics_service.py  answer_generation.py  chat_service.py  document_checker.py  document_processor.py  question_extraction.py
app/static/: audit.html  chat.html  download.html  extract.html  generate.html  index.html
app/static/css/: main.css
app/static/js/: analytics.js  app.js  error-handler.js
app/tests/integration/: test_imports.py
app/tests/unit/test_api/: test_app.py
app/tests/unit/test_config/: test_backend_services.py
app/tests/unit/test_core/: test_base_service.py
app/tests/unit/test_services/: test_analytics_service.py  test_answer_generation_service.py  test_chat_service.py  test_document_checker_service.py  test_question_extraction_service.py
docs/: ARIA_evaluation.md  analytics-overview.md  analytics.md  deployment.md  development.md
environments/: development.yml  production.yml  staging.yml
sample_data/: README.md
sample_data/knowledge_base/: databricks_qa_dataset.csv  product_keyword_mappings.csv
sample_data/rfps/: agricultural_ai_rfp_example.html
src/aria/notebooks/: README.md
src/aria/notebooks/agents/: audit_agent.py  rfi_processor.py
src/aria/notebooks/agents/eval/: Evaluate ARIA vs Submission.py  quality.py
src/aria/notebooks/agents/rag/: 01_create_vs_idx.py
src/aria/notebooks/deployment/: __init__.py
src/aria/notebooks/etl/: 01a_responses_etl.py  01b_docs_etl.py  01c_product_keywords_etl.py  01d_blogs_etl.py
src/aria/notebooks/etl/web_scraper/: scraper.py  testing web scraping.py  web_scraper.py
src/aria/notebooks/evaluation/: Evaluate_ARIA_vs_Submission.py
targets/: development.yml  production.yml  staging.yml
uploads/: file-1755138327532-285000784.html  file-1755138748152-58005147.html  file-1755190324331-363377122.html  file-1755263012025-556995517.html  file-1755270950559-821779403.html  file-1755443935640-644621800.csv  file-1755881064823-611708970.html  file-1755888268411-487864440.html  file-1755903845061-665983002.html
